ex_1.12/image_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-app-svc
spec:
  selector:
    app: image-app
  ports:
    - port: 3000
      targetPort: 3000
